kubernetes_manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APPLICATION_NAME}
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ${APPLICATION_NAME}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ${APPLICATION_NAME}
    spec:
      containers:
        - name: ${APPLICATION_NAME}
          image: ${CONTAINER_IMAGE_TAGGED}
          resources: {}

---
apiVersion: v1
kind: Service
metadata:
  name: ${APPLICATION_NAME}
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ${APPLICATION_NAME}
  ports:
    - port: 3000

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APPLICATION_NAME}
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: MQTT Alarm clock
    gethomepage.dev/icon: mdi-alarm
    gethomepage.dev/group: 1P
spec:
  hostnames:
    - mqtt-alarm-clock.home.maximemoreillon.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: eg
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: mqtt-alarm-clock
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
